// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultBlockAppender should append a default block when input focused 1`] = `
<div>
  <div
    class="block-editor-default-block-appender has-visible-prompt"
    data-root-client-id=""
  >
    <p
      aria-label="Add default block"
      class="block-editor-default-block-appender__content"
      role="button"
      tabindex="0"
    >
      Type / to choose a block
    </p>
  </div>
</div>
`;

exports[`DefaultBlockAppender should match snapshot 1`] = `
<div>
  <div
    class="block-editor-default-block-appender has-visible-prompt"
    data-root-client-id=""
  >
    <p
      aria-label="Add default block"
      class="block-editor-default-block-appender__content"
      role="button"
      tabindex="0"
    >
      Type / to choose a block
    </p>
  </div>
</div>
`;

exports[`DefaultBlockAppender should optionally show without prompt 1`] = `
<div>
  <div
    class="block-editor-default-block-appender"
    data-root-client-id=""
  >
    <p
      aria-label="Add default block"
      class="block-editor-default-block-appender__content"
      role="button"
      tabindex="0"
    >
      ﻿
    </p>
  </div>
</div>
`;
